[tool.poetry]
name = "ntteast_coco"
version = "0.1.0"
description = ""
authors = ["Wataru Yoshida <yoshida@ss.cs.osakafu-u.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Cython = "^0.29.21"
scikit-image = "0.14.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
